# MARINE-AI---National-AI-Hackathon---AI-Fest

./: .env.example  .gitignore  PRODUCT.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
apps/api/: main.py  schemas.py
apps/bridge/: package-lock.json
apps/bridge/app/: globals.css  layout.tsx  page.tsx
apps/bridge/components/: ControlPanel.tsx  Simulator.tsx  TelemetryPanel.tsx
apps/bridge/lib/: api.ts  contracts.ts  environment.ts  landmask.ts  nautical.ts  render-chart.ts  render-helm.ts  router.ts  simulation.ts
apps/bridge/public/: chart.json
data/: build_chart.py  download.py  registry.py
docs/: DATA.md  DEPLOY.md  DEVIATIONS.md
models/: fuel_degradation.card.json  fuel_degradation.onnx
services/emissions/: __init__.py
services/speed/: dataset.py  fuel.py  optimizer.py  resistance.py  train.py
tests/: test_api.py  test_contracts.py  test_emissions.py  test_fuel.py  test_ingest.py  test_optimizer.py  test_resistance.py
